test/good/classes/inheritance04.px

class Z def
    func f(Char x: 'Z') def
        print x

class Y(Z) def
    Int x: 0

Y().f('Y')
Y().f(x='Y')
Y().f()
