test/bad/generators/iterable02.px

func f(): Char... def
    yield ...'x'

f()
